  * general: adjusting log levels
    5:LLNotice: comments,messages, Execution of sections
    6:LLInfo; Statements, New values for stringvars , complete boolean expression
    7: new values for stringlist vars, Output from sections,
       shellcall if the output is not written to a stringlist, parts of a boolean expression
    8: other stringlist output
    9: content of saved teporary files

-- Detlef Oertel <d.oertel@uib.de>  Wed, 27 Sep 2017:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.5) stable; urgency=low

  * osmain / osinteractivegui: new cli argument /logproductid
    just used for logging, do not try to get data from service
  * osbatchGUI: TFBatchOberflaeche.FormActivate also for Linux

-- Detlef Oertel <d.oertel@uib.de>  Mon, 11 Sep 2017:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.4) stable; urgency=low

  * osconf: readConfigFromService: protect from wrong data types from service

-- Detlef Oertel <d.oertel@uib.de>  Mon, 04 Sep 2017:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.3) stable; urgency=low

  * global: rising the level of a lot of loging

-- Detlef Oertel <d.oertel@uib.de>  Fri, 01 Sep 2017:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.2) stable; urgency=low

  * osbatchgui: ForceStayOnTop modified
  * osbatchgui: ForceStayOnTop in form.activate
  * osconf: default_loglevel = 6;
  * osfunc: alldelete: del command: allow also partly wildcards (*.yxz or xyz.*)

-- Detlef Oertel <d.oertel@uib.de>  Thu, 24 Aug 2017:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.1) experimental; urgency=low

  * oswebservice: changed loglevels in retrieveJSONObject
  * osfunc: FindLocalIPData / getMyHostEnt : better Error handling

-- Detlef Oertel <d.oertel@uib.de>  Thu, 27 Jun 2017:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.0) experimental; urgency=low

  * new unit osdefinedfunctions
  * osparser: support for defined functions
  * osparser: moved sync between FExtremeErrorLevel and extremeErrorLevel before final output