@@ -194,7 +194,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="78">
+    <Units Count="79">
       <Unit0>
         <Filename Value="winst64.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -265,10 +265,9 @@
         <ComponentName Value="SystemInfo"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="15"/>
         <TopLine Value="60"/>
-        <CursorPos X="5" Y="90"/>
+        <CursorPos X="28" Y="70"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -464,8 +463,9 @@
       </Unit27>
       <Unit28>
         <Filename Value="changelog.txt"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
-        <CursorPos X="23" Y="5"/>
+        <CursorPos Y="22"/>
         <UsageCount Value="100"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
@@ -604,8 +604,8 @@
         <Filename Value="osparser.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="14"/>
-        <TopLine Value="16748"/>
-        <CursorPos X="36" Y="16767"/>
+        <TopLine Value="43"/>
+        <CursorPos X="23" Y="74"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -633,7 +633,7 @@
       <Unit47>
         <Filename Value="osfuncwin.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="16"/>
+        <EditorIndex Value="17"/>
         <TopLine Value="6"/>
         <CursorPos Y="29"/>
         <UsageCount Value="204"/>
@@ -748,10 +748,10 @@
       </Unit62>
       <Unit63>
         <Filename Value="wispecfolder.pas"/>
-        <EditorIndex Value="17"/>
+        <EditorIndex Value="18"/>
         <TopLine Value="15"/>
         <CursorPos X="12" Y="39"/>
-        <UsageCount Value="24"/>
+        <UsageCount Value="27"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit63>
@@ -768,7 +768,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="29"/>
+        <UsageCount Value="34"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit65>
       <Unit66>
@@ -778,7 +778,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="30"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit66>
       <Unit67>
@@ -788,7 +788,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="30"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit67>
       <Unit68>
@@ -798,7 +798,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="30"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit68>
       <Unit69>
@@ -808,7 +808,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="30"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit69>
       <Unit70>
@@ -818,7 +818,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="30"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit70>
       <Unit71>
@@ -828,7 +828,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="30"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit71>
       <Unit72>
@@ -838,7 +838,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="30"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit72>
       <Unit73>
@@ -848,7 +848,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="30"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit73>
       <Unit74>
@@ -858,7 +858,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="30"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit74>
       <Unit75>
@@ -867,7 +867,7 @@
         <EditorIndex Value="7"/>
         <TopLine Value="430"/>
         <CursorPos Y="472"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="30"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit75>
@@ -878,7 +878,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="25"/>
+        <UsageCount Value="30"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit76>
       <Unit77>
@@ -889,123 +889,137 @@
         <UsageCount Value="11"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit77>
+      <Unit78>
+        <Filename Value="oslistedit.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="FListedit"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+        <EditorIndex Value="16"/>
+        <TopLine Value="7"/>
+        <CursorPos X="58" Y="42"/>
+        <UsageCount Value="25"/>
+        <Loaded Value="True"/>
+        <LoadedDesigner Value="True"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
+      </Unit78>
     </Units>
     <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
         <Filename Value="osparser.pas"/>
-        <Caret Line="40" Column="12" TopLine="10"/>
+        <Caret Line="10397" Column="36" TopLine="10372"/>
       </Position1>
       <Position2>
-        <Filename Value="osfuncwin3.pas"/>
-        <Caret Line="35" Column="13" TopLine="6"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="10499" Column="40" TopLine="10474"/>
       </Position2>
       <Position3>
         <Filename Value="osparser.pas"/>
-        <Caret Line="10397" Column="36" TopLine="10372"/>
+        <Caret Line="3223" Column="19" TopLine="3201"/>
       </Position3>
       <Position4>
         <Filename Value="osparser.pas"/>
-        <Caret Line="10499" Column="40" TopLine="10474"/>
+        <Caret Line="10499" Column="12" TopLine="10474"/>
       </Position4>
       <Position5>
         <Filename Value="osparser.pas"/>
-        <Caret Line="3223" Column="19" TopLine="3201"/>
+        <Caret Line="3239" Column="23" TopLine="3201"/>
       </Position5>
       <Position6>
         <Filename Value="osparser.pas"/>
-        <Caret Line="10499" Column="12" TopLine="10474"/>
+        <Caret Line="10559" Column="12" TopLine="10483"/>
       </Position6>
       <Position7>
         <Filename Value="osparser.pas"/>
-        <Caret Line="3239" Column="23" TopLine="3201"/>
+        <Caret Line="7510" Column="20" TopLine="7485"/>
       </Position7>
       <Position8>
         <Filename Value="osparser.pas"/>
-        <Caret Line="10559" Column="12" TopLine="10483"/>
+        <Caret Line="8135" Column="21" TopLine="8110"/>
       </Position8>
       <Position9>
         <Filename Value="osparser.pas"/>
-        <Caret Line="7510" Column="20" TopLine="7485"/>
+        <Caret Line="8351" Column="12" TopLine="8326"/>
       </Position9>
       <Position10>
         <Filename Value="osparser.pas"/>
-        <Caret Line="8135" Column="21" TopLine="8110"/>
+        <Caret Line="8560" Column="14" TopLine="8535"/>
       </Position10>
       <Position11>
         <Filename Value="osparser.pas"/>
-        <Caret Line="8351" Column="12" TopLine="8326"/>
+        <Caret Line="9132" Column="25" TopLine="9112"/>
       </Position11>
       <Position12>
         <Filename Value="osparser.pas"/>
-        <Caret Line="8560" Column="14" TopLine="8535"/>
+        <Caret Line="3226" Column="21" TopLine="3201"/>
       </Position12>
       <Position13>
         <Filename Value="osparser.pas"/>
-        <Caret Line="9132" Column="25" TopLine="9112"/>
+        <Caret Line="10509" Column="72" TopLine="10492"/>
       </Position13>
       <Position14>
         <Filename Value="osparser.pas"/>
-        <Caret Line="3226" Column="21" TopLine="3201"/>
+        <Caret Line="3239" Column="16" TopLine="3201"/>
       </Position14>
       <Position15>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="10509" Column="72" TopLine="10492"/>
-      </Position15>
-      <Position16>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="3239" Column="16" TopLine="3201"/>
-      </Position16>
-      <Position17>
         <Filename Value="wispecfolder.pas"/>
         <Caret Line="50" Column="6" TopLine="23"/>
+      </Position15>
+      <Position16>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="45" Column="15" TopLine="16"/>
+      </Position16>
+      <Position17>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="36" TopLine="10"/>
       </Position17>
       <Position18>
         <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="45" Column="15" TopLine="16"/>
+        <Caret Line="1300" Column="14" TopLine="46"/>
       </Position18>
       <Position19>
         <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="36" TopLine="10"/>
+        <Caret Line="1402" Column="8" TopLine="1385"/>
       </Position19>
       <Position20>
         <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="1300" Column="14" TopLine="46"/>
+        <Caret Line="2136" Column="35" TopLine="2056"/>
       </Position20>
       <Position21>
         <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="1402" Column="8" TopLine="1385"/>
+        <Caret Line="2192" Column="6" TopLine="2164"/>
       </Position21>
       <Position22>
         <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="2136" Column="35" TopLine="2056"/>
+        <Caret Line="2253" Column="10" TopLine="2221"/>
       </Position22>
       <Position23>
-        <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="2192" Column="6" TopLine="2164"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="10683" Column="33" TopLine="10658"/>
       </Position23>
       <Position24>
         <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="2253" Column="10" TopLine="2221"/>
+        <Caret Line="2277" Column="33" TopLine="2243"/>
       </Position24>
       <Position25>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="10683" Column="33" TopLine="10658"/>
-      </Position25>
-      <Position26>
-        <Filename Value="osfuncwin2.pas"/>
-        <Caret Line="2277" Column="33" TopLine="2243"/>
-      </Position26>
-      <Position27>
         <Filename Value="osfuncwin2.pas"/>
         <Caret Line="2306" Column="47" TopLine="2291"/>
-      </Position27>
-      <Position28>
+      </Position25>
+      <Position26>
         <Filename Value="osfunc.pas"/>
         <Caret Line="420" Column="10" TopLine="394"/>
+      </Position26>
+      <Position27>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="11892" Column="16" TopLine="11867"/>
+      </Position27>
+      <Position28>
+        <Filename Value="oslistedit.pas"/>
+        <Caret Line="2" Column="19"/>
       </Position28>
       <Position29>
         <Filename Value="osparser.pas"/>
-        <Caret Line="11892" Column="16" TopLine="11867"/>
+        <Caret Line="16767" Column="36" TopLine="16739"/>
       </Position29>
     </JumpHistory>
   </ProjectOptions>
